# swagger.json
@@ -56,6 +56,16 @@
             "required": true,
             "schema": "string",
             "description": "path that you want to explore"
+          },{
+            "in":"query",
+            "name": "s3",
+            "schema": "string",
+            "description": "if you want to use s3"
+          },{
+            "in":"query",
+            "name": "bucket",
+            "schema": "string",
+            "description": "bucket you want to explore"
           }
         ],
         "summary": "Explorer everything inside",
@@ -96,6 +106,16 @@
             "required": true,
             "schema": "string",
             "description": "path that you want to explore"
+          },{
+            "in":"query",
+            "name": "s3",
+            "schema": "string",
+            "description": "if you want to use s3"
+          },{
+            "in":"query",
+            "name": "bucket",
+            "schema": "string",
+            "description": "bucket you want to explore"
           }
         ],
         "summary": "Explorer 1 level inside",
